// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpotlightSidebar renders correctly 1`] = `
<div
  className="spotlight__aside"
>
  <style
    jsx={true}
  >
    
        min-height: 500px;
      
  </style>
</div>
`;

exports[`SpotlightSidebar renders with the specified class name 1`] = `
<div
  className="spotlight__aside spotlight__aside--no-margin"
>
  <style
    jsx={true}
  >
    
        min-height: 500px;
      
  </style>
</div>
`;
